Termine de llenar la pagina con las peliculas restantes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <ul>
                 <li>INICIO</li>
                 <li>GENEROS</li>
+                <li>DETALLES</li>
             </ul>
         </section>
     </header>
@@ -72,6 +73,31 @@
             <article>
                 <img src="./img-series/poster-loki.jpg" alt="">
                 <h3>Loki</h3>
+            </article>
+        </section>
+        <div>
+            <H2>PELICULAS MÁS VALORADAS</H2>
+        </div>
+        <section>
+            <article>
+                <img src="./img-series-nuevo/Avengers_Infinity_War_-_Póster_oficial.png" alt="">
+                <h3>Avengers: IninityWar</h3>
+            </article>
+            <article>
+                <img src="./img-series-nuevo/DeadPool.jpg" alt="">
+                <h3>DeadPool</h3>
+            </article>
+            <article>
+                <img src="./img-series-nuevo/Iron Man.jpg" alt="">
+                <h3>Iron Man:El Hombre de Acero</h3>
+            </article>
+            <article>
+                <img src="./img-series-nuevo/Justice League.jpg" alt="">
+                <h3>La Liga de la Justicia de Zack Snyder</h3>
+            </article>
+            <article>
+                <img src="./img-series-nuevo/Spiderman 2.jpg" alt="">
+                <h3> Spiderman 2</h3>
             </article>
         </section>
 
