Modifique el Header y Footer del Index

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>R.M.B. Movies</title>
+    <title>LIVE STAR</title>
     <link rel="stylesheet" href="./css/estilo.css">
 </head>
 
@@ -13,10 +13,12 @@
     <header>
         <section>
             <h1>
-                <a href="./index.html">R.M.B. Movies</a>
+                <a href="./index.html">LIVE STAR</a>
             </h1>
             <ul>
-                <li>INICIO</li>
+                <li>
+                    <a href="./index.html">INICIO</a>
+                </li>
                 <li>GENEROS</li>
                 <li>DETALLES</li>
             </ul>
@@ -100,6 +102,22 @@
                 <h3> Spiderman 2</h3>
             </article>
         </section>
+        <footer>
+            <section>
+                <ul>
+                    <li>
+                        <h4>Roberto Arellano</h4>
+                        <a href="mailto:rarellanochoque@udes.edu.ar">rarellanochoque@udes.edu.ar</a>
+                    </li>
+                    <li>
+                        <h4>Martiniano Sanchez</h4>
+                    </li>
+                    <li>
+
+                    </li>
+                </ul>
+            </section>
+        </footer>
 
 
 
