--- a/detail-movie.html
+++ b/detail-movie.html
@@ -10,7 +10,10 @@
 
 <body>
     <div>
-        <H2>INFORMACIÓN</H2>
+        <H2>DETALLES</H2>
+    </div>
+    <div>
+        <H2>PELÍCULAS POPULARES</H2>
     </div>
     <section>
         <article>
@@ -24,7 +27,7 @@
             <h4>
                 <a>Sínopsis:</a>
             </h4>
-            
+
             <p>Después de los eventos devastadores de 'Avengers: Infinity War', el universo está en ruinas debido a las
                 acciones de Thanos, el Titán Loco. Con la ayuda de los aliados que quedaron, los Vengadores deberán
                 reunirse una vez más para intentar deshacer sus acciones y restaurar el orden en el universo de una vez
@@ -34,15 +37,15 @@
             <h4>
                 <a>Calificación:</a>
             </h4>
-            <p>7.3/10⭐</p>
+            <p>8.4/10⭐</p>
             <h4>
                 <a>Género:</a>
             </h4>
-            <P>Ciencia </P>
+            <P> </P>
             <h4>
                 <a>Fecha de Estreno:</a>
             </h4>
-            <p></p>
+            <p>22/4/2019</p>
         </article>
         <article>
             <h3>Batman: The Dark Knight</h3>
@@ -53,15 +56,17 @@
             <h4>
                 <a>Sínopsis:</a>
             </h4>
-            <p>Después de los eventos devastadores de 'Avengers: Infinity War', el universo está en ruinas debido a las
-                acciones de Thanos, el Titán Loco. Con la ayuda de los aliados que quedaron, los Vengadores deberán
-                reunirse una vez más para intentar deshacer sus acciones y restaurar el orden en el universo de una vez
-                por todas, sin importar cuáles son las consecuencias... Cuarta y última entrega de la saga "Vengadores"
+            <p>
+                Con la ayuda del teniente Jim Gordon y el nuevo y comprometido Fiscal del Distrito, Harvey Dent, Batman
+                se propone destruir para siempre el crimen organizado en Gotham City. Al principio, el triunvirato
+                resulta ser eficaz, pero pronto se encontrará preso de un incipiente cerebro criminal conocido como
+                Joker, que introduce la anarquía en Gotham y obliga al Caballero Oscuro a cruzar aún más la fina línea
+                que separa al héroe del justiciero.
             </p>
             <h4>
                 <a>Calificación:</a>
             </h4>
-            <p>⭐</p>
+            <p>9.0/10⭐</p>
             <h4>
                 <a>Género:</a>
             </h4>
@@ -69,7 +74,7 @@
             <h4>
                 <a>Fecha de Estreno:</a>
             </h4>
-            <p></p>
+            <p>17/7/2008</p>
         </article>
         <article>
             <h3> The Suicide Squad</h3>
@@ -80,15 +85,17 @@
             <h4>
                 <a>Sínopsis:</a>
             </h4>
-            <p>Después de los eventos devastadores de 'Avengers: Infinity War', el universo está en ruinas debido a las
-                acciones de Thanos, el Titán Loco. Con la ayuda de los aliados que quedaron, los Vengadores deberán
-                reunirse una vez más para intentar deshacer sus acciones y restaurar el orden en el universo de una vez
-                por todas, sin importar cuáles son las consecuencias... Cuarta y última entrega de la saga "Vengadores"
+            <p>
+                Un grupo de super villanos se encuentran encerrados en Belle Reve, una prisión de alta seguridad con la
+                tasa de mortalidad más alta de Estados Unidos. Para salir de allí harán cualquier cosa, incluso unirse
+                al grupo Task Force X, dedicado a llevar a cabo misiones suicidas bajo las órdenes de Amanda Waller.
+                Fuertemente armados son enviados a la isla Corto Maltese, una jungla repleta de enemigos.
+
             </p>
             <h4>
                 <a>Calificación:</a>
             </h4>
-            <p>⭐</p>
+            <p>7.4/10⭐</p>
             <h4>
                 <a>Género:</a>
             </h4>
@@ -96,7 +103,7 @@
             <h4>
                 <a>Fecha de Estreno:</a>
             </h4>
-            <p></p>
+            <p>5/8/2021</p>
         </article>
         <article>
             <h3>Spiderman: Far From Home</h3>
@@ -107,15 +114,18 @@
             <h4>
                 <a>Sínopsis:</a>
             </h4>
-            <p>Después de los eventos devastadores de 'Avengers: Infinity War', el universo está en ruinas debido a las
-                acciones de Thanos, el Titán Loco. Con la ayuda de los aliados que quedaron, los Vengadores deberán
-                reunirse una vez más para intentar deshacer sus acciones y restaurar el orden en el universo de una vez
-                por todas, sin importar cuáles son las consecuencias... Cuarta y última entrega de la saga "Vengadores"
+            <p>
+                Peter Parker decide irse junto a MJ, Ned y el resto de sus amigos a pasar unas vacaciones a Europa. Sin
+                embargo, el plan de Parker por dejar de lado sus superpoderes durante unas semanas se ven truncados
+                cuando Nick Fury contacta con él para solicitarle ayuda para frenar el ataque de unas criaturas
+                elementales que están causando el caos en el continente. En ese momento, Parker vuelve a ponerse el
+                traje de Spider-Man para cumplir con su labor.
+
             </p>
             <h4>
                 <a>Calificación:</a>
             </h4>
-            <p>⭐</p>
+            <p>7.5/10⭐</p>
             <h4>
                 <a>Género:</a>
             </h4>
@@ -123,7 +133,7 @@
             <h4>
                 <a>Fecha de Estreno:</a>
             </h4>
-            <p></p>
+            <p>2/6/2019</p>
             <article>
                 <h3>Venom</h3>
                 <h5>
@@ -133,15 +143,20 @@
                 <h4>
                     <a>Sínopsis:</a>
                 </h4>
-                <p>Después de los eventos devastadores de 'Avengers: Infinity War', el universo está en ruinas debido a
-                    las acciones de Thanos, el Titán Loco. Con la ayuda de los aliados que quedaron, los Vengadores
-                    deberán reunirse una vez más para intentar deshacer sus acciones y restaurar el orden en el universo
-                    de una vez por todas, sin importar cuáles son las consecuencias... Cuarta y última entrega de la
-                    saga "Vengadores"</p>
+                <p>Como periodista, Eddie Brock (Tom Hardy) lleva tiempo intentando desenmascarar al creador de la
+                    Fundación Vida, el famoso genio científico Carlton Drake (Riz Ahmed), una obsesión que ha arruinado
+                    su carrera y su relación con su novia, Anne (Michelle Williams). Al investigar uno de los
+                    experimentos de Drake, el ente alienígena Venom se fusiona con el cuerpo de Eddie, y el reportero
+                    adquiere de pronto nuevos e increíbles superpoderes, así como la oportunidad de hacer prácticamente
+                    lo que se le antoje. Retorcido, oscuro, impredecible e impulsado por la cólera, Venom obliga a Eddie
+                    a luchar por controlar unas habilidades sumamente peligrosas que, al mismo tiempo, también resultan
+                    embriagadoras y le hacen sentir poderoso. Dado que Eddie y Venom se necesitan mutuamente para
+                    conseguir lo que quieren, se van entremezclando cada vez más... ¿Dónde acaba Eddie y empieza Venom?
+                </p>
                 <h4>
                     <a>Calificación:</a>
                 </h4>
-                <p>⭐</p>
+                <p>6.7⭐</p>
                 <h4>
                     <a>Género:</a>
                 </h4>
@@ -149,7 +164,176 @@
                 <h4>
                     <a>Fecha de Estreno:</a>
                 </h4>
-                <p></p>
+                <p>4/10/2018</p>
+            </article>
+</body>
+
+</html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <div>
+        <H2>DETALLES DE PELÍCULAS POPULARES</H2>
+    </div>
+    <section>
+        <article>
+            <h3>
+                <a>Avengers:Infinity War</a>
+            </h3>
+            <h5>
+                <a>Duración (2h 29m)</a>
+            </h5>
+           
+            <img src="./img-series-nuevo/Avengers_Infinity_War_-_Póster_oficial.png " 
+            <h4>
+            <a>Sínopsis:</a>
+            </h4>
+
+            <p>Después de los eventos devastadores de 'Avengers: Infinity War', el universo está en ruinas debido a las
+                acciones de Thanos, el Titán Loco. Con la ayuda de los aliados que quedaron, los Vengadores deberán
+                reunirse una vez más para intentar deshacer sus acciones y restaurar el orden en el universo de una vez
+                por todas, sin importar cuáles son las consecuencias... Cuarta y última entrega de la saga "Vengadores"
+            </p>
+
+            <h4>
+                <a>Calificación:</a>
+            </h4>
+            <p>8.4/10⭐</p>
+            <h4>
+                <a>Género:</a>
+            </h4>
+            <P> </P>
+            <h4>
+                <a>Fecha de Estreno:</a>
+            </h4>
+            <p>22/4/2019</p>
+        </article>
+        <article>
+            <h3>Batman: The Dark Knight</h3>
+            <h5>
+                <a>Duración (2h 32m)</a>
+            </h5>
+            <img src="./img/Batman_el_Caballero_de_la_Noche.png" alt="">
+            <h4>
+                <a>Sínopsis:</a>
+            </h4>
+            <p>
+                Con la ayuda del teniente Jim Gordon y el nuevo y comprometido Fiscal del Distrito, Harvey Dent, Batman
+                se propone destruir para siempre el crimen organizado en Gotham City. Al principio, el triunvirato
+                resulta ser eficaz, pero pronto se encontrará preso de un incipiente cerebro criminal conocido como
+                Joker, que introduce la anarquía en Gotham y obliga al Caballero Oscuro a cruzar aún más la fina línea
+                que separa al héroe del justiciero.
+            </p>
+            <h4>
+                <a>Calificación:</a>
+            </h4>
+            <p>9.0/10⭐</p>
+            <h4>
+                <a>Género:</a>
+            </h4>
+            <P></P>
+            <h4>
+                <a>Fecha de Estreno:</a>
+            </h4>
+            <p>17/7/2008</p>
+        </article>
+        <article>
+            <h3> The Suicide Squad</h3>
+            <h5>
+                <a>Duración (2h 12m)</a>
+            </h5>
+            <img src="./img/peli1.jpg" alt="">
+            <h4>
+                <a>Sínopsis:</a>
+            </h4>
+            <p>
+                Un grupo de super villanos se encuentran encerrados en Belle Reve, una prisión de alta seguridad con la
+                tasa de mortalidad más alta de Estados Unidos. Para salir de allí harán cualquier cosa, incluso unirse
+                al grupo Task Force X, dedicado a llevar a cabo misiones suicidas bajo las órdenes de Amanda Waller.
+                Fuertemente armados son enviados a la isla Corto Maltese, una jungla repleta de enemigos.
+
+            </p>
+            <h4>
+                <a>Calificación:</a>
+            </h4>
+            <p>7.4/10⭐</p>
+            <h4>
+                <a>Género:</a>
+            </h4>
+            <P></P>
+            <h4>
+                <a>Fecha de Estreno:</a>
+            </h4>
+            <p>5/8/2021</p>
+        </article>
+        <article>
+            <h3>Spiderman: Far From Home</h3>
+            <h5>
+                <a>Duración (2h 10m)</a>
+            </h5>
+            <img src="./img/Spider_Man_Far_From_Home_-_Póster_EEUU.png" alt="">
+            <h4>
+                <a>Sínopsis:</a>
+            </h4>
+            <p>
+                Peter Parker decide irse junto a MJ, Ned y el resto de sus amigos a pasar unas vacaciones a Europa. Sin
+                embargo, el plan de Parker por dejar de lado sus superpoderes durante unas semanas se ven truncados
+                cuando Nick Fury contacta con él para solicitarle ayuda para frenar el ataque de unas criaturas
+                elementales que están causando el caos en el continente. En ese momento, Parker vuelve a ponerse el
+                traje de Spider-Man para cumplir con su labor.
+
+            </p>
+            <h4>
+                <a>Calificación:</a>
+            </h4>
+            <p>7.5/10⭐</p>
+            <h4>
+                <a>Género:</a>
+            </h4>
+            <P></P>
+            <h4>
+                <a>Fecha de Estreno:</a>
+            </h4>
+            <p>2/6/2019</p>
+            <article>
+                <h3>Venom</h3>
+                <h5>
+                    <a>Duración (2h 20m)</a>
+                </h5>
+                <img src="./img/venom-cartel-final-1537282420.jpg" alt="">
+                <h4>
+                    <a>Sínopsis:</a>
+                </h4>
+                <p>Como periodista, Eddie Brock (Tom Hardy) lleva tiempo intentando desenmascarar al creador de la
+                    Fundación Vida, el famoso genio científico Carlton Drake (Riz Ahmed), una obsesión que ha arruinado
+                    su carrera y su relación con su novia, Anne (Michelle Williams). Al investigar uno de los
+                    experimentos de Drake, el ente alienígena Venom se fusiona con el cuerpo de Eddie, y el reportero
+                    adquiere de pronto nuevos e increíbles superpoderes, así como la oportunidad de hacer prácticamente
+                    lo que se le antoje. Retorcido, oscuro, impredecible e impulsado por la cólera, Venom obliga a Eddie
+                    a luchar por controlar unas habilidades sumamente peligrosas que, al mismo tiempo, también resultan
+                    embriagadoras y le hacen sentir poderoso. Dado que Eddie y Venom se necesitan mutuamente para
+                    conseguir lo que quieren, se van entremezclando cada vez más... ¿Dónde acaba Eddie y empieza Venom?
+                </p>
+                <h4>
+                    <a>Calificación:</a>
+                </h4>
+                <p>6.7⭐</p>
+                <h4>
+                    <a>Género:</a>
+                </h4>
+                <P></P>
+                <h4>
+                    <a>Fecha de Estreno:</a>
+                </h4>
+                <p>4/10/2018</p>
             </article>
 </body>
 
