detalles de las peliculas terminadas , solo falta generos y linkear que se encarga rober

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -192,7 +192,7 @@
                 <a>Duración (2h 29m)</a>
             </h5>
            
-            <img src="./img-series-nuevo/Avengers_Infinity_War_-_Póster_oficial.png " 
+            <img src="./img-series-nuevo/Avengers_Infinity_War_-_Póster_oficial.png " alt=""
             <h4>
             <a>Sínopsis:</a>
             </h4>
