Cambios en el index en cuanto a fotos y titulo. Agregue etiqueta <a> a los titulos para poder linkearlos.

--- a/detail-series.html
+++ b/detail-series.html
@@ -44,7 +44,9 @@
             <p>12/10/2018</p>
         </article>
         <article>
-            <h3>Daredevil</h3>
+            <h3>
+               <a>Daredevil</a> 
+            </h3>
             <h5>
                 <a>Temporadas: 3</a>
             </h5>
@@ -74,7 +76,9 @@
             <p>10/4/2015</p>
         </article>
         <article>
-            <h3> Watchmen</h3>
+            <h3>
+                <a>Watchmen</a> 
+                </h3>
             <h5>
                 <a>Temporadas: 1</a>
             </h5>
@@ -102,7 +106,9 @@
             <p>20/10/2019</p>
         </article>
         <article>
-            <h3>Gotham</h3>
+            <h3>
+               <a>Gotham</a> 
+            </h3>
             <h5>
                 <a>Temporadas: 5</a>
             </h5>
@@ -129,7 +135,9 @@
             </h4>
             <p>22/9/2014</p>
             <article>
-                <h3>Loki</h3>
+                <h3>
+                   <a>Loki</a> 
+                </h3>
                 <h5>
                     <a>Temporadas: 1</a>
                 </h5>
