--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
             </article>
             <article>
                 <img src="./img-series-nuevo/Iron Man.jpg" alt="">
-                <h3>Iron Man:El Hombre de Acero</h3>
+                <h3>Iron Man</h3>
             </article>
             <article>
-                <img src="./img-series-nuevo/Justice League.jpg" alt="">
-                <h3>La Liga de la Justicia de Zack Snyder</h3>
+                <img src="./img/Justice_League_-_Póster_con_Superman.png" alt="">
+                <h3>Justice League</h3>
             </article>
             <article>
                 <img src="./img-series-nuevo/Spiderman 2.jpg" alt="">
