--- a/detail-movie.html
+++ b/detail-movie.html
@@ -84,7 +84,7 @@
 
         <article>
             <h3> 
-                <a>Suicide Squad</a> 
+                <a>The Suicide Squad</a> 
             </h3>
             <h5>
                 <a>Duración (2h 12m)</a>
