Agrege el enlace a todas las peliculas y series a sus detalles

--- a/index.html
+++ b/index.html
@@ -37,19 +37,27 @@
             </article>
             <article>
                 <img src="./img/Batman_el_Caballero_de_la_Noche.png" alt="">
-                <h3>Batman: The Dark Knight</h3>
+                <h3>
+                    <a href="./detail-movie.html">Batman: The Dark Knight</a>
+                </h3>
             </article>
             <article>
                 <img src="./img/peli1.jpg" alt="">
-                <h3> The Suicide Squad</h3>
+                <h3>
+                    <a href="./detail-movie.html">The Suicide Squad</a>
+                </h3>
             </article>
             <article>
                 <img src="./img/Spider_Man_Far_From_Home_-_Póster_EEUU.png" alt="">
-                <h3>Spiderman: Far From Home</h3>
+                <h3>
+                    <a href="./detail-movie.html">Spiderman: Far From Home</a>
+                </h3>
             </article>
             <article>
                 <img src="./img/venom-cartel-final-1537282420.jpg" alt="">
-                <h3>Venom</h3>
+                <h3>
+                    <a href="./detail-movie.html">Venom</a>
+                </h3>
             </article>
         </section>
         <div>
@@ -58,23 +66,33 @@
         <section>
             <article>
                 <img src="./img-series/1626347372_668942_1626347505_sumario_normal.jpg" alt="">
-                <h3>Titans</h3>
+                <h3>
+                    <a href="./detail-series.html">Titans</a>
+                </h3>
             </article>
             <article>
                 <img src="./img-series/daredevil-serie-tv-cartel.jpg" alt="">
-                <h3>Daredevil</h3>
+                <h3>
+                    <a href="./detail-series.html">Daredevil</a>   
+                </h3>
             </article>
             <article>
                 <img src="./img-series/HBO-Watchmen-Poster-Full.png" alt="">
-                <h3>Watchmen</h3>
+                <h3>
+                    <a href="./detail-series.html">Watchmen</a>
+                </h3>
             </article>
             <article>
                 <img src="./img-series/news-00086600-gotham-season-2-poster.jpg" alt="">
-                <h3>Gotham</h3>
+                <h3>
+                    <a href="./detail-series.html">Gotham</a>
+                </h3>
             </article>
             <article>
                 <img src="./img-series/poster-loki.jpg" alt="">
-                <h3>Loki</h3>
+                <h3>
+                    <a href="./detail-series.html">Loki</a>
+                </h3>
             </article>
         </section>
         <div>
@@ -83,19 +101,27 @@
         <section>
             <article>
                 <img src="./img-series-nuevo/Avengers_Infinity_War_-_Póster_oficial.png" alt="">
-                <h3>Avengers: IninityWar</h3>
+                <h3>
+                    <a href="./detail-movie.html">Avengers: IninityWar</a>
+                </h3>
             </article>
             <article>
                 <img src="./img-series-nuevo/DeadPool.jpg" alt="">
-                <h3>DeadPool</h3>
+                <h3>
+                    <a href="./detail-movie.html">DeadPool</a>
+                </h3>
             </article>
             <article>
                 <img src="./img-series-nuevo/Iron Man.jpg" alt="">
-                <h3>Iron Man</h3>
+                <h3>
+                    <a href="./detail-movie.html">Iron Man</a>
+                </h3>
             </article>
-            <article> 
+            <article>
                 <img src="./img/Justice_League_-_Póster_con_Superman.png" alt="">
-                <h3>Justice League</h3>
+                <h3>
+                    <a href="./detail-movie.html">Justice League</a>
+                </h3>
             </article>
             <article>
                 <img src="./img-series-nuevo/Spiderman 2.jpg" alt="">
