Hice cambios en el codigo del detalle de las peliculas

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -10,23 +10,17 @@
 
 <body>
     <div>
-        <H2>DETALLES</H2>
+        <H2>DETALLES DE PELICULAS</H2>
     </div>
     <div>
         <H2>PELÍCULAS POPULARES</H2>
     </div>
     <section>
         <article>
-            <h3>
-                <a>Avengers:EndGame</a>
-            </h3>
-            <h5>
-                <a>Duración (3h 2m)</a>
-            </h5>
+            <h3>Avengers:EndGame</h3>
+            <h4>Duración (3h 2m)</h4>
             <img src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt="">
-            <h4>
-                <a>Sínopsis:</a>
-            </h4>
+            <h4>Sínopsis:</h4>
 
             <p>Después de los eventos devastadores de 'Avengers: Infinity War', el universo está en ruinas debido a las
                 acciones de Thanos, el Titán Loco. Con la ayuda de los aliados que quedaron, los Vengadores deberán
@@ -34,32 +28,24 @@
                 por todas, sin importar cuáles son las consecuencias... Cuarta y última entrega de la saga "Vengadores"
             </p>
 
-            <h4>
-                <a>Calificación:</a>
-            </h4>
+            <h4>Calificación:</h4>
             <p>8.4/10⭐</p>
             <h4>
-                <a>Género:</a>
+                <a href="./genres.html">Género:</a>
             </h4>
-            <P> </P>
-            <h4>
-                <a>Fecha de Estreno:</a>
-            </h4>
+            <P>
+                <a href="./detail-genres.html"></a>
+            </P>
+            <h4>Fecha de Estreno:</h4>
             <p>22/4/2019</p>
         </article>
 
 
         <article>
-            <h3>
-                <a>The Dark Knight</a> 
-            </h3>
-            <h5>
-                <a>Duración (2h 32m)</a>
-            </h5>
+            <h3>The Dark Knight</h3>
+            <h4>Duración (2h 32m)</h4>
             <img src="./img/Batman_el_Caballero_de_la_Noche.png" alt="">
-            <h4>
-                <a>Sínopsis:</a>
-            </h4>
+            <h4>Sínopsis:</h4>
             <p>
                 Con la ayuda del teniente Jim Gordon y el nuevo y comprometido Fiscal del Distrito, Harvey Dent, Batman
                 se propone destruir para siempre el crimen organizado en Gotham City. Al principio, el triunvirato
@@ -67,98 +53,69 @@
                 Joker, que introduce la anarquía en Gotham y obliga al Caballero Oscuro a cruzar aún más la fina línea
                 que separa al héroe del justiciero.
             </p>
-            <h4>
-                <a>Calificación:</a>
-            </h4>
+            <h4>Calificación:</h4>
             <p>9.0/10⭐</p>
             <h4>
-                <a>Género:</a>
+                <a href="./genres.html">Género</a>
             </h4>
-            <P></P>
-            <h4>
-                <a>Fecha de Estreno:</a>
-            </h4>
+            <P>
+                <a href="./detail-genres.html"></a>
+            </P>
+            <h4>Fecha de Estreno:</h4>
             <p>17/7/2008</p>
         </article>
-
-
         <article>
-            <h3> 
-                <a>The Suicide Squad</a> 
-            </h3>
-            <h5>
-                <a>Duración (2h 12m)</a>
-            </h5>
+            <h3>The Suicide Squad</h3>
+            <h4>Duración (2h 12m)</h4>
             <img src="./img/peli1.jpg" alt="">
-            <h4>
-                <a>Sínopsis:</a>
-            </h4>
+            <h4>Sínopsis:</h4>
             <p>
                 Un grupo de super villanos se encuentran encerrados en Belle Reve, una prisión de alta seguridad con la
                 tasa de mortalidad más alta de Estados Unidos. Para salir de allí harán cualquier cosa, incluso unirse
                 al grupo Task Force X, dedicado a llevar a cabo misiones suicidas bajo las órdenes de Amanda Waller.
                 Fuertemente armados son enviados a la isla Corto Maltese, una jungla repleta de enemigos.
-
             </p>
-            <h4>
-                <a>Calificación:</a>
-            </h4>
+            <h4>Calificación:</h4>
             <p>7.4/10⭐</p>
             <h4>
-                <a>Género:</a>
+                <a href="./genres.html">Género</a>
             </h4>
-            <P></P>
-            <h4>
-                <a>Fecha de Estreno:</a>
-            </h4>
+            <P>
+                <a href="./detail-genres.html"></a>
+            </P>
+            <h4>Fecha de Estreno:</h4>
             <p>5/8/2021</p>
         </article>
 
 
         <article>
-            <h3>
-               <a>Spiderman: Far From Home</a> 
-            </h3>
-            <h5>
-                <a>Duración (2h 10m)</a>
-            </h5>
-            <img src="./img/Spider_Man_Far_From_Home_-_Póster_EEUU.png" alt="">
+            <h3>Spiderman: Far From Home</h3>
             <h4>
-                <a>Sínopsis:</a>
+                <a>Duración (2h 10m)</a>
             </h4>
+            <img src="./img/Spider_Man_Far_From_Home_-_Póster_EEUU.png" alt="">
+            <h4>Sínopsis:</h4>
             <p>
                 Peter Parker decide irse junto a MJ, Ned y el resto de sus amigos a pasar unas vacaciones a Europa. Sin
                 embargo, el plan de Parker por dejar de lado sus superpoderes durante unas semanas se ven truncados
                 cuando Nick Fury contacta con él para solicitarle ayuda para frenar el ataque de unas criaturas
                 elementales que están causando el caos en el continente. En ese momento, Parker vuelve a ponerse el
                 traje de Spider-Man para cumplir con su labor.
-
             </p>
-            <h4>
-                <a>Calificación:</a>
-            </h4>
+            <h4>Calificación:</h4>
             <p>7.5/10⭐</p>
             <h4>
-                <a>Género:</a>
+                <a href="./genres.html">Género</a>
             </h4>
-
-            <h4>
-                <a>Fecha de Estreno:</a>
-            </h4>
+            <h4>Fecha de Estreno:</h4>
             <p>2/6/2019</p>
             <article>
 
 
-                <h3>
-                    <a>Venom</a>
-                </h3>
-                <h5>
-                    <a>Duración (2h 20m)</a>
-                </h5>
+                <h3>Venom</h3>
+                <h4>Duración (2h 20m)</h4>
                 <img src="./img/venom-cartel-final-1537282420.jpg" alt="">
-                <h4>
-                    <a>Sínopsis:</a>
-                </h4>
+                <h4>Sínopsis:</h4>
                 <p>Como periodista, Eddie Brock (Tom Hardy) lleva tiempo intentando desenmascarar al creador de la
                     Fundación Vida, el famoso genio científico Carlton Drake (Riz Ahmed), una obsesión que ha arruinado
                     su carrera y su relación con su novia, Anne (Michelle Williams). Al investigar uno de los
@@ -169,14 +126,14 @@
                     embriagadoras y le hacen sentir poderoso. Dado que Eddie y Venom se necesitan mutuamente para
                     conseguir lo que quieren, se van entremezclando cada vez más... ¿Dónde acaba Eddie y empieza Venom?
                 </p>
-                <h4>
-                    <a>Calificación:</a>
-                </h4>
+                <h4>Calificación:</h4>
                 <p>6.7⭐</p>
                 <h4>
-                    <a>Género:</a>
+                    <a href="./genres.html">Género</a>
                 </h4>
-                <P></P>
+                <P>
+                    <a href="./detail-genres.html"></a>
+                </P>
                 <h4>
                     <a>Fecha de Estreno:</a>
                 </h4>
@@ -234,7 +191,7 @@
 
         <article>
             <h3>
-               <a>DeadPool</a> 
+                <a>DeadPool</a>
             </h3>
             <h5>
                 <a>Duración (1h 48m)</a>
@@ -267,7 +224,7 @@
 
         <article>
             <h3>
-              <a>Iron Man</a>  
+                <a>Iron Man</a>
             </h3>
             <h5>
                 <a>Duración (2h 6m)</a>
@@ -337,7 +294,7 @@
 
         <article>
             <h3>
-               <a>Spider-Man 2</a> 
+                <a>Spider-Man 2</a>
             </h3>
             <h5>
                 <a>Duración (2h 7m)</a>
