Termine el footer

--- a/index.html
+++ b/index.html
@@ -137,9 +137,11 @@
                     </li>
                     <li>
                         <h4>Martiniano Sanchez</h4>
-                        <a href="mail:martinianosanchez@udesa.edu.ar">martinianosanchez@udesa.edu.ar</a>
+                        <a href="mailto:martinianosanchez@udesa.edu.ar">martinianosanchez@udesa.edu.ar</a>
                     </li>
                     <li>
+                        <h4>Bonifacio Lastra</h4>
+                        <a href="mailto:blastra@udesa.edu.ar"></a>
 
 
                     </li>
