--- a/detail-series.html
+++ b/detail-series.html
@@ -26,10 +26,10 @@
             <h4>Calificación</h4>
             <p>7.6/10⭐</p>
             <h4>
-                <a href="./genres.html">Géneros</a>
+                <a href="./genres.html">Género:</a>
             </h4>
             <P>
-                <a href="./detail-genres.html"></a>
+                <a href="./detail-genres.html">Acción</a>
             </P>
             <h4>Fecha de Estreno</h4>
             <p>12/10/2018</p>
@@ -72,7 +72,7 @@
                 <a href="./genres.html">Género:</a>
             </h4>
             <P>
-                <a href="./detail-genres.html"></a>
+                <a href="./detail-genres.html">Ciencia Ficción</a>
             </P>
             <h4>Fecha de Estreno:</h4>
             <p>20/10/2019</p>
@@ -115,7 +115,9 @@
                 <h4>
                     <a href="./genres.html">Género</a>
                 </h4>
-                <P><a href="./detail-genres.html"></a></P>
+                <P>
+                    <a href="./detail-genres.html"></a>
+                </P>
                 <h4>Fecha de Estreno:</h4>
                 <p>9/6/2021</p>
             </article>
