Complete el esqueleto de todas las pagina

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="./index.html">INICIO</a>
                 </li>
                 <li>GENEROS</li>
-                <li>DETALLES</li>
+                <li>FAVORITOS</li>
             </ul>
         </section>
     </header>
