--- a/detail-movie.html
+++ b/detail-movie.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PELICULAS</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="stylesheet" href="./css/dentail-movie.css">
 </head>
 
 <body>
@@ -387,6 +388,8 @@
                     Duración (2h 7m)
                 </h4>
                 <img src="./img-series-nuevo/Spiderman 2.jpg" alt="">
+            </article>
+            <article>
                 <h4>
                     Sínopsis:
                 </h4>
