Cambie foto para Titans

--- a/detail-series.html
+++ b/detail-series.html
@@ -51,7 +51,7 @@
             <article>
                 <h3>Titans</h3>
                 <h4>Temporada: 3</h4>
-                <img src="./img-series/ Titans.jpg" alt="">
+                <img src="./img-series/poster titans.jpg" alt="">
             </article>
             <article>
                 <h4>Sínopsis:</h4>
