--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <header>
-        <section>
-            <h1>
+        <section class="FlexPadre">
+            <h1 class="titulo">
                 <a href="./index.html">LIVE STAR</a>
             </h1>
             <ul>
@@ -84,7 +84,7 @@
         </div>
         <section>
             <article>
-                <img src="./img-series/1626347372_668942_1626347505_sumario_normal.jpg" alt="">
+                <img src="./img-series/poster titans.jpg" alt="">
                 <h3>
                     <a href="./detail-series.html">Titans</a>
                 </h3>
