--- a/index.html
+++ b/index.html
@@ -14,33 +14,41 @@
     <header>
         <section class="FlexPadre">
             <h1 class="titulo">
-                <a href="./index.html">LIVE STAR</a>
+                <a href="./index.html" class="tituloprincipal">LIVE STAR</a>
             </h1>
-            <ul>
+            <article>
+                <ul type="none" class="flexhijo">
 
-                <li>
-                    <form action="./search-results.html" method="GET">
-                        <div>
-                            <input type="text" name="buscar" placeholder="Buscar..">
-                        </div>
-                        <div>
-                            <button type="submit">
-                                <i class="fas fa-search"></i>
-                            </button>
-                        </div>
+                    <li>
+                        <form action="./search-results.html" method="GET" class="buscador">
+                            <div>
+                                <input type="text" name="buscar" placeholder="Buscar..">
+                            </div>
+                            <div>
+                                <button type="submit">
+                                    <i class="fas fa-search"></i>
+                                </button>
+                            </div>
 
-                    </form>
-                </li>
-                <li>
-                    <a href="./index.html">INICIO</a>
-                </li>
-                <li>
-                    <a href="./genres.html">GÉNEROS</a>
-                </li>
-                <li>
-                    <a href="./favoritos.html">FAVORITOS</a>
-                </li>
-            </ul>
+                        </form>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="./index.html" class="controles">INICIO</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="./genres.html" class="controles">GÉNEROS</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="./favoritos.html" class="controles">FAVORITOS</a>
+                        </div>
+                    </li>
+                </ul>
+            </article>
         </section>
     </header>
     <main>
