--- a/favoritos.html
+++ b/favoritos.html
@@ -99,8 +99,8 @@
                     <a href="mailto:martinianosanchez@udesa.edu.ar">martinianosanchez@udesa.edu.ar</a>
                 </li>
                 <li>
-                    <h4>Bonifacio Lastra</h4>
-                    <a href="mailto:blastra@udesa.edu.ar"></a>
+                    <h4>Bonifacio Lastra buenas</h4>
+                    <a href="mailto:blastra@udesa.edu.ar"></a>bonifaciolastra@udesa.edu.ar</a> 
                 </li>
             </ul>
         </section>
