--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
             </article>
         </section>
     </main>
+    <script src="./index.js"></script>
     <footer>
         <section>
             <ul type="none" class="footer">
